# astar2048

./: README.md  astar2048.cabal
src/: Colors.hs  Dimensions.hs  Game.hs  Main.hs  Render.hs  Window.hs
