cabal-version: 3.0

author: lamekino
synopsis: 2048 Solver using A*

name: astar2048
version: 0.1.0.0
build-type: Simple

common warnings
    ghc-options: -Wall -prof -rtsopts

-- TODO: make a separate executable with profiling enabled
executable astar2048
    import: warnings
    main-is: Main.hs
    ghc-options:
        -O2
        -threaded
        -fprof-auto
        "-with-rtsopts=-N -p -s -h -i0.1"
    other-modules: Game, Window, Colors, Dimensions, Render
    build-depends:
        base ^>=4.17.2.1,
        array ^>=0.5.4.0,
        containers ^>= 0.6.7,
        random ^>= 1.2.1.2,
        text ^>= 2.0.2,
        vector ^>= 0.13.2.0,
        sdl2 ^>= 2.5.5.0,
        sdl2-ttf ^>= 2.1.3
    hs-source-dirs: src
    default-language: Haskell2010
